--- a/model_evaluation.yaml
+++ b/model_evaluation.yaml
@@ -518,8 +518,9 @@ implementation:
             report.append('')
             report.append("="*80)
             
-            newline = '\n'
-            return newline.join(report)
+            sep = chr(10)
+            result = sep.join(report)
+            return result
         
         
         def main():
