--- a/CDN_Download.yaml
+++ b/CDN_Download.yaml
@@ -44,7 +44,6 @@ implementation:
             description="Download Data Splitting Results from CDN"
         )
         
-        # Input CDN URLs
         parser.add_argument('--train_data_cdn_url', required=True,
                            help="CDN URL for training data CSV")
         parser.add_argument('--test_data_cdn_url', required=True,
@@ -52,7 +51,6 @@ implementation:
         parser.add_argument('--test_ground_truth_cdn_url', required=True,
                            help="CDN URL for test ground truth NPY")
         
-        # Output paths for downloaded files
         parser.add_argument('--output_train_data', required=True,
                            help="Output path for downloaded train data")
         parser.add_argument('--output_test_data', required=True,
@@ -69,33 +67,25 @@ implementation:
         print("="*80)
         print("")
         
-        # Handle URL encoding (fix double dollar signs if present)
         def fix_url_encoding(url):
-            # Replace double $$ with single $ (common encoding issue)
             return url.replace("$$", "$")
         
         def download_file(cdn_url, output_path, file_description, is_binary=False):
-            # Download a single file from CDN
-            print(f'Downloading {file_description}...')
-            print(f'  CDN URL: {cdn_url}')
+            print('Downloading', file_description)
+            print('  CDN URL:', cdn_url)
             
-            # Fix URL encoding
             fixed_url = fix_url_encoding(cdn_url)
             
             try:
-                # Download file
-                print(f'  Fetching from CDN...')
+                print('  Fetching from CDN...')
                 response = requests.get(fixed_url, timeout=60)
                 response.raise_for_status()
                 
-                # Get file size
                 file_size = len(response.content)
-                print(f'  Downloaded: {file_size:,} bytes ({file_size/1024:.2f} KB)')
+                print('  Downloaded:', str(file_size) + ' bytes (' + str(round(file_size/1024, 2)) + ' KB)')
                 
-                # Ensure output directory exists
                 os.makedirs(os.path.dirname(output_path), exist_ok=True)
                 
-                # Save file
                 mode = 'wb' if is_binary else 'w'
                 if is_binary:
                     with open(output_path, mode) as f:
@@ -104,8 +94,8 @@ implementation:
                     with open(output_path, mode) as f:
                         f.write(response.text)
                 
-                print(f'  Saved to: {output_path}')
-                print(f'  Status: Success')
+                print('  Saved to:', output_path)
+                print('  Status: Success')
                 print("")
                 
                 return {
@@ -117,16 +107,14 @@ implementation:
                 }
             
             except requests.exceptions.RequestException as e:
-                print(f'  Status: Failed')
-                print(f'  Error: {str(e)}')
+                print('  Status: Failed')
+                print('  Error:', str(e))
                 print("")
-                raise RuntimeError(f'Failed to download {file_description}: {str(e)}')
+                raise RuntimeError('Failed to download ' + file_description + ': ' + str(e))
         
-        # Download all three files
         download_results = {}
         
         try:
-            # 1. Download training data (CSV - text)
             train_result = download_file(
                 args.train_data_cdn_url,
                 args.output_train_data,
@@ -135,7 +123,6 @@ implementation:
             )
             download_results['train_data'] = train_result
             
-            # 2. Download test data (CSV - text)
             test_result = download_file(
                 args.test_data_cdn_url,
                 args.output_test_data,
@@ -144,7 +131,6 @@ implementation:
             )
             download_results['test_data'] = test_result
             
-            # 3. Download test ground truth (NPY - binary)
             test_gt_result = download_file(
                 args.test_ground_truth_cdn_url,
                 args.output_test_ground_truth,
@@ -153,21 +139,19 @@ implementation:
             )
             download_results['test_ground_truth'] = test_gt_result
             
-            # Verify NPY file (basic check)
             try:
                 import numpy as np
                 gt_data = np.load(args.output_test_ground_truth, allow_pickle=False)
-                print(f'NPY file verification:')
-                print(f'  Shape: {gt_data.shape}')
-                print(f'  Data type: {gt_data.dtype}')
-                print(f'  Min value: {gt_data.min()}')
-                print(f'  Max value: {gt_data.max()}')
+                print('NPY file verification:')
+                print('  Shape:', gt_data.shape)
+                print('  Data type:', gt_data.dtype)
+                print('  Min value:', gt_data.min())
+                print('  Max value:', gt_data.max())
                 print("")
             except Exception as e:
-                print(f'Warning: Could not verify NPY file: {str(e)}')
+                print('Warning: Could not verify NPY file:', str(e))
                 print("")
             
-            # Create download summary
             summary = {
                 'timestamp': int(time.time()),
                 'download_status': 'success',
@@ -177,7 +161,6 @@ implementation:
                 'files': download_results
             }
             
-            # Save summary
             os.makedirs(os.path.dirname(args.output_download_summary), exist_ok=True)
             with open(args.output_download_summary, "w") as f:
                 json.dump(summary, f, indent=2)
@@ -185,11 +168,11 @@ implementation:
             print("="*80)
             print("CDN DOWNLOAD COMPLETED SUCCESSFULLY")
             print("="*80)
-            print(f'Files downloaded: 3')
-            print(f'Total size: {summary['total_size_kb']:.2f} KB')
-            print(f'Training data: {args.output_train_data}')
-            print(f'Test data: {args.output_test_data}')
-            print(f'Test ground truth: {args.output_test_ground_truth}')
+            print('Files downloaded: 3')
+            print('Total size:', str(round(summary['total_size_kb'], 2)), 'KB')
+            print('Training data:', args.output_train_data)
+            print('Test data:', args.output_test_data)
+            print('Test ground truth:', args.output_test_ground_truth)
             print("="*80)
             
         except Exception as e:
@@ -197,10 +180,9 @@ implementation:
             print("="*80)
             print("CDN DOWNLOAD FAILED")
             print("="*80)
-            print(f'Error: {str(e)}')
+            print('Error:', str(e))
             print("="*80)
             
-            # Create error summary
             error_summary = {
                 'timestamp': int(time.time()),
                 'download_status': 'failed',
